--- a/docs/script/lib/request-zero/package.json
+++ b/docs/script/lib/request-zero/package.json
@@ -1,20 +1,53 @@
 {
-  "name": "request-zero",
-  "version": "0.2.8",
+  "_from": "request-zero@latest",
+  "_id": "request-zero@0.2.8",
+  "_inBundle": false,
+  "_integrity": "sha512-7bTJobtLMfM7rKOIMU5Tj4y47+BS6rofv9QQMhucimI9BGwk7V79BzV1j8aTPS13Qbhq1VBGDB5hCsimKw9vow==",
+  "_location": "/request-zero",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "request-zero@latest",
+    "name": "request-zero",
+    "escapedName": "request-zero",
+    "rawSpec": "latest",
+    "saveSpec": null,
+    "fetchSpec": "latest"
+  },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/request-zero/-/request-zero-0.2.8.tgz",
+  "_shasum": "0575cf6a17029cd6ab0962e713d6cc9ea94bd781",
+  "_spec": "request-zero@latest",
+  "_where": "D:\\Documents\\GitHub\\Aion-Japanese-Voice-Pack",
+  "author": {
+    "name": "Anthony Beaumont",
+    "email": "dev.xan105@outlook.be",
+    "url": "https://xan105.com/"
+  },
+  "browser": "fetch.js",
+  "bugs": {
+    "url": "https://github.com/xan105/node-request-zero/issues"
+  },
+  "bundleDependencies": false,
+  "deprecated": false,
   "description": "Simple dependency-free promise based HTTP request client with file download progress.",
-  "type": "module",
-  "main": "request.cjs",
+  "devDependencies": {
+    "eslint": "^7.6.0",
+    "webtorrent": "^0.108.6",
+    "xml2js": "^0.4.23"
+  },
+  "engines": {
+    "node": ">=0.12"
+  },
   "exports": {
     "import": "./esm.mjs",
     "require": "./request.cjs"
   },
-  "browser": "fetch.js",
-  "engines": {
-    "node": ">=0.12"
-  },
-  "scripts": {
-    "lint": "npx eslint --ignore-path .gitignore ./**/*.{cjs,mjs,js}"
-  },
+  "homepage": "https://github.com/xan105/node-request-zero#readme",
   "keywords": [
     "request",
     "client",
@@ -28,20 +61,9 @@
     "json",
     "xml"
   ],
-  "author": {
-    "name": "Anthony Beaumont",
-    "email": "dev.xan105@outlook.be",
-    "url": "https://xan105.com/"
-  },
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xan105/node-request-zero.git"
-  },
-  "bugs": {
-    "url": "https://github.com/xan105/node-request-zero/issues"
-  },
-  "homepage": "https://github.com/xan105/node-request-zero#readme",
+  "main": "request.cjs",
+  "name": "request-zero",
   "peerDependencies": {
     "webtorrent": "^0.107.17",
     "xml2js": "^0.4.23"
@@ -54,9 +76,13 @@
       "optional": true
     }
   },
-  "devDependencies": {
-    "eslint": "^7.6.0",
-    "webtorrent": "^0.107.17",
-    "xml2js": "^0.4.23"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xan105/node-request-zero.git"
+  },
+  "scripts": {
+    "lint": "npx eslint --ignore-path .gitignore ./**/*.{cjs,mjs,js}"
+  },
+  "type": "module",
+  "version": "0.2.8"
 }
