--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xan105/Aion-Voice-Pack",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Change the voice acting of your Aion client into sweet Japanese or Korean",
   "main": "main.js",
   "os": [
@@ -34,11 +34,11 @@
   },
   "homepage": "https://github.com/xan105/Aion-Japanese-Voice-Pack#readme",
   "dependencies": {
-    "@xan105/fs": "git+https://github.com/xan105/node-fs.git",
-    "@xan105/log": "git+https://github.com/xan105/node-log.git",
+    "@xan105/fs": "^1.2.0",
+    "@xan105/log": "^1.0.2",
+    "@xan105/request": "^0.3.3",
     "adm-zip": "^0.4.13",
-    "parse-torrent": "^7.1.3",
-    "request-zero": "^0.3.1"
+    "parse-torrent": "^7.1.3"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
